--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "reveal.js",
-  "version": "4.1.3",
-  "description": "The HTML Presentation Framework",
-  "homepage": "https://revealjs.com",
-  "subdomain": "revealjs",
+  "name": "webassembly-presentation",
+  "version": "1.0",
   "main": "dist/reveal.js",
   "module": "dist/reveal.esm.js",
   "license": "MIT",
@@ -13,9 +10,8 @@
     "build": "gulp build"
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "https://hakim.se"
+    "name": "Ivan Béthus",
+    "email": "ivan.bethus@gmail.com"
   },
   "repository": {
     "type": "git",
